# CPTCOPRO

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
reports/: call_graph.md
src/cptcopro/: .env.example  Affichage_Data.py  Affichage_Plotly.py  Affichage_Stream.py  Backup_DB.py  Data_To_BDD.py  Dedoublonnage.py  Parsing_Charge_Copro.py  Parsing_Commun.py  Parsing_Lots.py  Parsing_Lots_Copro.py  Parsing_Site_Syndic.py  Stats_copro.py  Traitement_Charge_Copro.py  Traitement_Lots_Copro.py  Traitement_Parsing.py  __init__.py  logger_config.py  main.py  visualisation.py
src/cptcopro/.streamlit/: config.toml
src/cptcopro/Database/: Alertes_Config.py  Charges_To_BDD.py  Coproprietaires_To_BDD.py  Creation_BDD.py  Dedoublonnage.py  Verif_Prerequis_BDD.py  __init__.py  constants.py
src/cptcopro/Pages/: Alerte.py  Config_Alertes.py  Courbe_Charge_Copro.py  Dashboard.py  Liste_Charge.py  Liste_Copro.py  Rechecher_Copro.py  Rechercher_Copro.py  Stat_Alerte.py  Statistiques_Avancees.py
src/cptcopro/Parsing/: Charge_Copro.py  Commun.py  Lots_Copro.py  (+2 more)
tests/: test_backup_db.py  test_charge_and_triggers.py  test_config_alerte.py  test_data_to_bdd.py  test_dedoublonnage.py  test_enregistrer_coproprietaires_types.py  test_env_loader.py  test_parsing_lots.py  test_paths.py  test_privacy.py  test_recuperer_situation_copro.py  test_traitement_parsing.py  test_triggers.py  test_view_integration.py
tests/fixtures/: Solde_copro2_fixture.html  no_table.html  table_with_classes.html  table_without_classes.html
(+12 files in other folders)
