[project]
name = "cptcopro"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "selectolax (>=0.4.0,<0.5.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "streamlit-extras (>=0.7.8,<0.8.0)",
]

[tool.poetry]
packages = [{include = "cptcopro", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = ">=6.17.0,<7.0.0"
pytest-cov = "^7.0.0"
